# mikasa

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
Asset/Shaders/: VertexColorPS.hlsl  VertexColorVS.hlsl
Cmake/: SetupBoostLibrary.cmake  SetupBuildTypeDefs.cmake  SetupCompiler.cmake  SetupDependencyLibrariesRoot.cmake.template  SetupPlatformDefs.cmake  SetupProjectVars.cmake  SetupPythonLibrary.cmake  SetupThirdPartyLibraries.cmake  Utils.cmake
Document/: mikasa engine architecture.drawio
Source/: CMakeLists.txt
Source/Editor/: CMakeLists.txt  main.cpp
Source/Editor/Editor/: Editor.cpp  Editor.h  Panel.cpp  Panel.h
Source/Editor/Editor/MenuBar/: MainMenuBar.cpp  MainMenuBar.h
Source/Editor/Editor/Panels/: GamePanel.cpp  GamePanel.h  HierarchyPanel.cpp  HierarchyPanel.h  InspectorPanel.cpp  InspectorPanel.h  ScenePanel.cpp  ScenePanel.h
Source/Editor/Editor/Panels/GamePanel/: GamePanel.cpp  GamePanel.h
Source/Editor/Editor/Panels/HierarchyPanel/: HierarchyPanel.cpp  HierarchyPanel.h
Source/Editor/Editor/Panels/InspectorPanel/: InspectorPanel.cpp  InspectorPanel.h
Source/Editor/Editor/Panels/ScenePanel/: ScenePanel.cpp  ScenePanel.h
Source/Editor/EditorGUI/: EditorGUI.cpp  EditorGUI.h
Source/Editor/WindowsEditor/: WindowsEditor.cpp  WindowsEditor.h
Source/Player/: CMakeLists.txt  main.cpp
Source/Player/WindowsPlayer/: WindowsPlayer.cpp  WindowsPlayer.h
Source/Runtime/: CMakeLists.txt
Source/Runtime/Application/: ApplicationBase.cpp  ApplicationBase.h
Source/Runtime/Core/JobSystem/: EmptyJob.cpp  EmptyJob.h  Job.cpp  Job.h  JobSystem.cpp  JobSystem.h  JobSystemGlobalQueue.cpp  JobSystemGlobalQueue.h  JobWorker.cpp  JobWorker.h  JobWorkerRunnable.cpp  JobWorkerRunnable.h
Source/Runtime/Core/Misc/: ApplicationInitParam.cpp  ApplicationInitParam.h  WindowHandler.h
Source/Runtime/Core/Render/: RenderCommandQueue.cpp  RenderCommandQueue.h
Source/Runtime/Core/Scene/: GameObject.cpp  GameObject.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h
Source/Runtime/Core/Script/: ScriptVM.cpp  ScriptVM.h
Source/Runtime/Foundation/: ApplicationExitCode.h  Assert.h  BasicTypes.h  Foundation.h  MultiThread.h  Platform.h
Source/Runtime/Foundation/Console/: Console.cpp  Console.h  ConsoleInputRunnable.cpp  ConsoleInputRunnable.h
Source/Runtime/Foundation/Delegate/: Delegate.h
Source/Runtime/Foundation/Log/: ConsoleSink.cpp  ConsoleSink.h  Logger.cpp  Logger.h
Source/Runtime/Foundation/Math/: Commom.h  Math.h  Matrix4x4.h  Quaternion.h  Vector2.h  Vector3.h  Vector4.h
Source/Runtime/Foundation/MultiThread/: AutoResetEvent.h  CriticalSection.h  Fence.h  ManualResetEvent.h  MultiThread.h  Semaphore.h
Test/: CMakeLists.txt
Test/TestAutoResetEvent/: CMakeLists.txt  Test_AutoResetEvent.cpp
Test/TestBoostPython/: CMakeLists.txt  Test_BoostPython.cpp
Test/TestCriticalSection/: CMakeLists.txt  Test_CriticalSection.cpp
Test/TestDX11/: CMakeLists.txt  TestDX11_Triangle.cpp  sample.ps  sample.vs
Test/TestDelegate/: CMakeLists.txt  Test_Delegate.cpp
Test/TestFence/: CMakeLists.txt  Test_Fence.cpp
Test/TestImgui/: CMakeLists.txt  Test_Imgui.cpp
Test/TestLockFreeQueue/: CMakeLists.txt  Test_LockFreeQueue.cpp
Test/TestSemaphore/: CMakeLists.txt  Test_Semaphore.cpp
ThirdPartyLibrary/: BuildAll.bat  BuildAll.py  project-config.jam.temp
ThirdPartySource/imgui/: CMakeLists.txt
ThirdPartySource/imgui-1.90.9/: CMakeLists.txt
ThirdPartySource/imgui/docs/: EXAMPLES.md
ThirdPartySource/python/: build.bat
Tools/BoostBuildTool/: Build.bat  Build.py  project-config.jam.temp
(+160 files in other folders)
